--- a/templates/admin/adminPrincipal.html
+++ b/templates/admin/adminPrincipal.html
@@ -32,6 +32,9 @@
 	<div class="col-2">
 		<a type="button" class="btn btn-sm btn-danger" href="{% url 'eliminardatos' %}">Eliminar</a>	
 	</div>
+	<div class="col-2">
+		<a type="button" class="btn btn-sm btn-danger" href="{% url 'probandolawea' %}">Probando</a>	
+	</div>
 </div>
 {% endif %}
 
