--- a/templates/admin/BaseAdmin.html
+++ b/templates/admin/BaseAdmin.html
@@ -10,14 +10,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>    
+    <link rel="stylesheet" type="text/css" href="{% static 'custom.css' %}">
     <!--COLORPICKER-->
     <link rel="stylesheet" type="text/css" href="{% static 'spectrum.css' %}">
     <script type="text/javascript" src="{% static 'spectrum.js' %}"></script>
   </head>
-<body style="background-image: url('{% static "picharapoker_bg.jpg"%}');">
+<body style="background-color: #212121;">
     
   <div class="container-fluid mt-2">
-    <ul class="nav" style="background-image: url('{% static "descarga2.jpg" %}');">
+    <ul class="nav">
         <li class="nav-item">
           <a class="nav-link active text-light" href="{% url 'principalView' %}"><img src="{% static 'picharapoker_logo.png'%}" width="200px"></a>
         </li>
