--- a/templates/table.html
+++ b/templates/table.html
@@ -7,7 +7,147 @@
           <tr>
             {% for columna in fila %}
               {% if view == 'version' %}
+                <td  style="background-color: {{columna.2}};color: aliceblue;border: solid 1px white;">
+                  {{columna.0}}
+                </td>
+              {% else %}
+                {% if columna.1 == 4 or columna.1 == '#92d050' %}
+                  <td  class="ButtonCell color{{columna.1}}" id="{{columna.0}}|{{columna.1}}" style="color: black;border: solid 1px white;">
+                    {{columna.0}}
+                  </td>
+                {% else %}
+                  <td  class="ButtonCell color{{columna.1}}" id="{{columna.0}}|{{columna.1}}" style="color: aliceblue;border: solid 1px white;">
+                    {{columna.0}}
+                  </td>
+                {% endif %}
+              {% endif %}
+            {% endfor %}
+          </tr>
+          {% endfor %}
+
+        {% elif tabla %}
+          {% for fila in tabla %}
+          <tr>
+            {% for columna in fila %}
+              {% if admin %}
+                <td  class="ButtonVersion" id="{{columna}}|0" style="background-color: #292929;color: aliceblue;border: solid 1px white;">
+                  {{columna}}
+                </td>
+              {% elif view == 'profiles' or view == 'client'%}
+                <td  class="ButtonCell" id="{{columna}}|0" style="background-color: #292929; color: aliceblue;border: solid 1px white;">
+                  {{columna}} 
+                </td>
+              {% elif view == 'version' %}
                 <td style="background-color: {{columna.2}};color: aliceblue;border: solid 1px white;">
+                  {{columna.0}}
+                </td>
+              {% else %}
+                <td style="background-color: #292929; color: aliceblue;border: solid 1px white;">
+                  {{columna}}
+                </td>
+              {% endif %}
+            {% endfor %}
+          </tr>
+          {% endfor %}
+        {% endif %}
+      </tbody>
+    </table>
+  </div>
+
+{% elif view == 'profiles' %}
+  <div class="table table-responsive" id="TABLEC">
+    <table class="table table-sm" style="margin-bottom: 0%;">
+      <tbody>
+        {% if assigned %}
+          {% for fila in as_table %}
+          <tr>
+            {% for columna in fila %}
+              {% if view == 'version' or view == 'profiles' %}
+                <td style="background-color: {{columna.2}};color: aliceblue;border: solid 1px white;">
+                  {{columna.0}} 
+                </td>
+              {% endif %}
+            {% endfor %}
+          </tr>
+          {% endfor %}
+
+        {% else %}
+          {% if load_table %}
+            {% for fila in load_table %}
+            <tr>
+              {% for columna in fila %}
+                {% if view == 'version' or view == 'profiles' %}
+                  <td class="color{{columna.1}}" style="color: aliceblue;border: solid 1px white;">
+                    {{columna.0}} 
+                  </td>
+                {% endif %}
+              {% endfor %}
+            </tr>
+            {% endfor %}
+
+          {% else %}
+            {% for fila in tabla %}
+            <tr>
+              {% for columna in fila %}
+                <td style="background-color: #292929;color: aliceblue;border: solid 1px white;">
+                  {{columna}} 
+                </td>
+              {% endfor %}
+            </tr>
+            {% endfor %}
+            {% endif %}
+          {% endif %}
+      </tbody>
+    </table>
+  </div>
+  
+
+{% else %}
+  <div class="table table-responsive" id="TABLEC">
+    <table class="table table-sm" style="margin-bottom: 0%;">
+      <tbody>
+        {% if load_table %}
+          {% for fila in load_table %}
+          <tr>
+            {% for columna in fila %}
+              {% if view == 'version' or view == 'profiles' or view == 'client' %}
+                <td style="background-color: {{columna.2}};color: aliceblue;border: solid 1px white;">
+                  {{columna.0}}
+                </td>
+              {% endif %}
+            {% endfor %}
+          </tr>
+          {% endfor %}
+        {% else %}
+        {% for fila in tabla %}
+        <tr>
+          {% for columna in fila %}
+            <td style="background-color: #292929;color: aliceblue;border: solid 1px white;">
+              {{columna}}
+            </td>
+          {% endfor %}
+        </tr>
+        {% endfor %}
+        {% endif %}
+      </tbody>
+    </table>
+  </div>
+  
+{% endif %}
+
+
+<!--
+  Respaldo
+  {% if view == 'index' %}
+  <div class="table table-responsive" id="TABLEC">
+    <table class="table table-sm" style="margin-bottom: 0%;">
+      <tbody>
+        {% if load_table %}       
+          {% for fila in load_table %}
+          <tr>
+            {% for columna in fila %}
+              {% if view == 'version' %}
+                <td  style="background-color: {{columna.2}};color: aliceblue;border: solid 1px white;">
                   {{columna.0}}
                 </td>
               {% else %}
@@ -16,7 +156,7 @@
                     {{columna.0}}
                   </td>
                 {% else %}
-                  <td  class="ButtonCell" id="{{columna.0}}|{{columna.1}}" style="background-color: {{columna.2}};color: aliceblue;border: solid 1px white;">
+                  <td  class="ButtonCell color{{columna.1}}" id="{{columna.0}}|{{columna.1}}" style="background-color: {{columna.2}};color: aliceblue;border: solid 1px white;">
                     {{columna.0}}
                   </td>
                 {% endif %}
@@ -118,3 +258,4 @@
   </div>
   
 {% endif %}
+-->
