--- a/templates/admin/adminModClient.html
+++ b/templates/admin/adminModClient.html
@@ -18,7 +18,7 @@
         </div>
     </div>
     <h1 class="text-center text-white">{{client}}</h1>
-    <button class="btn btn-secondary">Volver</button>
+    <a type="button" class="btn btn-sm btn-secondary" href="{% url 'all_clients' %}">Volver</a>
     <div class="row">    
         <div class="col-6">
             <h4 class="text-center text-white">Perfiles de Jugadas asignadas</h4>
