--- a/templates/admin/new_client.html
+++ b/templates/admin/new_client.html
@@ -33,8 +33,8 @@
                 <input class="form-control" type="text" name="email">
             </div>
             <div class="col-3 form-group">
-                <label class="text-white" for="age">Edad</label>
-                <input class="form-control" type="text" name="age">
+                <label class="text-white" for="age">Telefono</label>
+                <input class="form-control" type="text" name="cellphone">
             </div>
         </div>
         <div class="row">
