--- a/templates/general/BaseGeneral.html
+++ b/templates/general/BaseGeneral.html
@@ -14,10 +14,10 @@
     <link rel="stylesheet" type="text/css" href="{% static 'spectrum.css' %}">
     <script type="text/javascript" src="{% static 'spectrum.js' %}"></script>
   </head>
-<body style="background-image: url('{% static "picharapoker_bg.jpg"%}');">
+<body style="background-color:#212121">
     
   <div class="container-fluid mt-2">
-    <ul class="nav" style="background-image: url('{% static "descarga2.jpg" %}');">
+    <ul class="nav">
         <li class="nav-item">
           <a class="nav-link active text-light" href="{% url 'principalView' %}"><img src="{% static 'picharapoker_logo.png'%}" width="200px"></a>
         </li>
