--- a/templates/login.html
+++ b/templates/login.html
@@ -46,10 +46,8 @@
                               <div class="p-5">
                                   <div class="text-center">
                                     <h1 class="h4 text-gray-900 mb-4"> Login</h1>
-                                    {% if messages %}
-                                        {% for message in messages %}
-                                            <p>{{ message }}</p>
-                                        {% endfor %}
+                                    {% if mensaje %}
+                                        <h4>{{mensaje}}</h4>
                                     {% endif %}
                                   </div>
                                     
