--- a/static/custom.css
+++ b/static/custom.css
@@ -1,101 +1,249 @@
+.bordado{
+	border: solid 1px white;
+}
+
 .color0{
-	background-color: #292929 !important;
+	background-color: #292929 ;
 	text-align: center;
-	color: #ffffff !important;
+	color: #ffffff ;
 }
 
 .color1{
-	background-color: #00B050 !important;
+	background-color: #00B050 ;
 	text-align: center;
-	color:#efefef !important;
+	color:#efefef ;
 }
 
 .color101{
-	background-color: #00B050 !important;
-	color: #ffffff !important;
+	background-color: #00B050 ;
+	color: #ffffff ;
 	text-align: center;
 }
 
 .color2{
-	background-color: #92D050 !important;
+	background-color: #92D050 ;
 	color: #333333;
 	text-align: center;
 }
 
 .color3{
-	background-color: #FF0000 !important;
+	background-color: #FF0000 ;
 	text-align: center;
 	color: #f5dbd7;
 }
 
 .color4{
-	background-color: #FFFF00 !important;
+	background-color: #FFFF00 ;
 	text-align: center;
+	color:black;
 }
 
 .color5{
-	background-color: #0070C0 !important;
-	color:#efefef !important;
+	background-color: #0070C0;
+	color:#efefef ;
 	text-align: center;
 }
 
 .color105{
-	background-color: #0070C0 !important;
-	color: #FF9900 !important;
+	background-color: #0070c1 ;
+	color: #FF9900 ;
 	text-align: center;
 }
 
 .color6{
-	background-color: #00B0F0 !important;
+	background-color: #00B0F0 ;
 	text-align: center;
 }
 
 .color7{
-	background-color: #00B050 !important;
+	background-color: #00B050 ;
 	text-align: center;
 }
 
 .color8{
-	background-color: #FF0000 !important;
+	background-color: #FF0000 ;
 	text-align: center;
 }
 
 .color9{
-	background-color: #00B050 !important;
+	background-color: #00B050 ;
 	text-align: center;
 }
 
 .color10{
-	background-color: #00B050 !important;
+	background-color: #00B050 ;
 	text-align: center;
 }
 
 .color11{
-	background-color: #FF0000 !important;
+	background-color: #FF0000 ;
 	text-align: center;
 }
 
 .color12{
-	background-color: #F2F2F2 !important;
+	background-color: #F2F2F2 ;
 	text-align: center;
 }
 
 .color13{
-	background-color: #FF5543 !important;
+	background-color: #FF5543 ;
 	text-align: center;
 }
 
 .color14{
-	background-color: #FC9F6C !important;
+	background-color: #FC9F6C ;
 	text-align: center;
 }
 
 .color15{
-	background-color: #BFBFBF !important;
+	background-color: #BFBFBF ;
 	text-align: center;
 }
 
 .color16{
+	background-color: #ff9d42 ;
+	text-align: center;
+}
+
+
+
+.ccolor0{
+	background-color: #292929 !important;
+	text-align: center;
+}
+
+.ccolor1{
+	background-color: #00B050 !important;
+	text-align: center;
+}
+
+.ccolor101{
+	background-color: #00B050 !important;
+	text-align: center;
+}
+
+.ccolor2{
+	background-color: #92D050 !important;
+	text-align: center;
+}
+
+.ccolor3{
+	background-color: #FF0000 !important;
+	text-align: center;
+}
+
+.ccolor4{
+	background-color: #FFFF00 !important;
+	text-align: center;
+}
+
+.ccolor5{
+	background-color: #0070C0 !important;
+	text-align: center;
+}
+
+.ccolor105{
+	background-color: #0070c1 !important;
+	text-align: center;
+}
+
+.ccolor6{
+	background-color: #00B0F0 !important;
+	text-align: center;
+}
+
+.ccolor7{
+	background-color: #00B050 !important;
+	text-align: center;
+}
+
+.ccolor8{
+	background-color: #FF0000 !important;
+	text-align: center;
+}
+
+.ccolor9{
+	background-color: #00B050 !important;
+	text-align: center;
+}
+
+.ccolor10{
+	background-color: #00B050 !important;
+	text-align: center;
+}
+
+.ccolor11{
+	background-color: #FF0000 !important;
+	text-align: center;
+}
+
+.ccolor12{
+	background-color: #F2F2F2 !important;
+	text-align: center;
+}
+
+.ccolor13{
+	background-color: #FF5543 !important;
+	text-align: center;
+}
+
+.ccolor14{
+	background-color: #FC9F6C !important;
+	text-align: center;
+}
+
+.ccolor15{
+	background-color: #BFBFBF !important;
+	text-align: center;
+}
+
+.ccolor16{
 	background-color: #ff9d42 !important;
 	text-align: center;
 }
+
+.is-colored{
+	width:40px;
+}
+
+.tags{align-items:center;display:flex;flex-wrap:wrap;justify-content:flex-start}
+.tags .tag{margin-bottom:.5rem}
+.tags .tag:not(:last-child){margin-right:.5rem}
+.tags:last-child{margin-bottom:-.5rem}
+.tags:not(:last-child){margin-bottom:1rem}
+.tags.are-medium .tag:not(.is-normal):not(.is-large){font-size:1rem}
+.tags.are-large .tag:not(.is-normal):not(.is-medium){font-size:1.25rem}
+.tags.is-centered{justify-content:center}
+.tags.is-centered .tag{margin-right:.25rem;margin-left:.25rem}
+.tags.is-right{justify-content:flex-end}
+.tags.is-right .tag:not(:first-child){margin-left:.5rem}
+.tags.is-right .tag:not(:last-child){margin-right:0}
+.tags.has-addons .tag{margin-right:0}
+.tags.has-addons .tag:not(:first-child){margin-left:0;border-bottom-left-radius:0;border-top-left-radius:0}
+.tags.has-addons .tag:not(:last-child){border-bottom-right-radius:0;border-top-right-radius:0}
+.tag:not(body){align-items:center;background-color:#f5f5f5;border-radius:4px;color:#4a4a4a;display:inline-flex;font-size:.75rem;height:2em;justify-content:center;line-height:1.5;padding-left:.75em;padding-right:.75em;white-space:nowrap}
+.tag:not(body) .delete{margin-left:.25rem;margin-right:-.375rem}
+.tag:not(body).is-white{background-color:#fff;color:#0a0a0a}
+.tag:not(body).is-black{background-color:#0a0a0a;color:#fff}
+.tag:not(body).is-light{background-color:#f5f5f5;color:rgba(0,0,0,.7)}
+.tag:not(body).is-dark{background-color:#363636;color:#fff}
+.tag:not(body).is-primary{background-color:#00d1b2;color:#fff}
+.tag:not(body).is-primary.is-light{background-color:#ebfffc;color:#00947e}
+.tag:not(body).is-link{background-color:#3273dc;color:#fff}
+.tag:not(body).is-link.is-light{background-color:#eef3fc;color:#2160c4}
+.tag:not(body).is-info{background-color:#3298dc;color:#fff}
+.tag:not(body).is-info.is-light{background-color:#eef6fc;color:#1d72aa}
+.tag:not(body).is-success{background-color:#48c774;color:#fff}
+.tag:not(body).is-success.is-light{background-color:#effaf3;color:#257942}
+.tag:not(body).is-warning{background-color:#ffdd57;color:rgba(0,0,0,.7)}
+.tag:not(body).is-warning.is-light{background-color:#fffbeb;color:#947600}
+.tag:not(body).is-danger{background-color:#f14668;color:#fff}
+.tag:not(body).is-danger.is-light{background-color:#feecf0;color:#cc0f35}
+.tag:not(body).is-normal{font-size:.75rem}
+.tag:not(body).is-medium{font-size:1rem}
+.tag:not(body).is-large{font-size:1.25rem}
+.tag:not(body) .icon:first-child:not(:last-child){margin-left:-.375em;margin-right:.1875em}
+.tag:not(body) .icon:last-child:not(:first-child){margin-left:.1875em;margin-right:-.375em}
+.tag:not(body) .icon:first-child:last-child{margin-left:-.375em;margin-right:-.375em}
+.tag:not(body).is-delete{margin-left:1px;padding:0;position:relative;width:2em}
+.tag:not(body).is-delete::after,.tag:not(body).is-delete::before{background-color:currentColor;content:"";display:block;left:50%;position:absolute;top:50%;transform:translateX(-50%) translateY(-50%) rotate(45deg);transform-origin:center center}.tag:not(body).is-delete::before{height:1px;width:50%}.tag:not(body).is-delete::after{height:50%;width:1px}.tag:not(body).is-delete:focus,.tag:not(body).is-delete:hover{background-color:#e8e8e8}.tag:not(body).is-delete:active{background-color:#dbdbdb}.tag:not(body).is-rounded{border-radius:290486px}a.tag:hover{text-decoration:underline}.subtitle,.title{word-break:break-word}.subtitle em,.subtitle span,.title em,.title span{font-weight:inherit}.subtitle sub,.title sub{font-size:.75em}.subtitle sup,.title sup{font-size:.75em}.subtitle .tag,.title .tag{vertical-align:middle}
