--- a/templates/clients/BaseClient.html
+++ b/templates/clients/BaseClient.html
@@ -11,9 +11,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>    
 </head>
 
-<body style="background-image: url('{% static "picharapoker_bg.jpg"%}');">
+<body style="background-color:#212121">
   <div class="container-fluid mt-2">
-    <ul class="nav" style="background-image: url('{% static "descarga2.jpg" %}');">
+    <ul class="nav">
         <li class="nav-item">
           <a class="nav-link active text-light" href="{% url 'principalView' %}"><img src="{% static 'picharapoker_logo.png'%}" width="200px"></a>
         </li>
