--- a/templates/admin/new_client.html
+++ b/templates/admin/new_client.html
@@ -34,7 +34,7 @@
             </div>
             <div class="col-3 form-group">
                 <label class="text-white" for="age">Telefono</label>
-                <input class="form-control" type="text" name="cellphone">
+                <input class="form-control" type="text" name="cellphone" maxlength="9">
             </div>
         </div>
         <div class="row">
