--- a/templates/clients/clientePrincipal.html
+++ b/templates/clients/clientePrincipal.html
@@ -6,7 +6,8 @@
     <table class="table table-dark table-striped table-bordered" style="border: 1px solid black;width: 100%;">
         <thead>
             <tr>
-                <td class="text-center">Nombre del perfil</td>
+                <th class="text-center">Nombre del perfil</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
