--- a/templates/clients/BaseClient.html
+++ b/templates/clients/BaseClient.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'custom.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>    
 </head>
@@ -20,13 +21,15 @@
         <li class="nav-item">
           <a class="nav-link text-light" href="{% url 'client_view' request.user.get_subid %}">Mis Jugadas</a>
         </li>
-        <li class="nav-item">
-          {% if request.user.is_authenticated %}
+        {% if request.user.is_authenticated %}
+          <li class="nav-item">
             <a class="nav-link text-light " href="{% url 'logout' %}">{{request.user.first_name}}</a>
+          </li>
           {% else %}
-            <a class="nav-link text-light " href="{% url 'login' %}">Iniciar Sesión</a>
+            <li class="nav-item">
+              <a class="nav-link text-light " href="{% url 'login' %}">Iniciar Sesión</a>
+            </li>
           {% endif %}
-        </li>
       </ul>
       {% block content %}
       {% endblock %}
